--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.1",
+    "react-popup-alert": "^2.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-simple-star-rating": "^3.0.0",
+    "sweetalert2": "^11.1.10",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
